# L4D2-Competitive-Rework

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README-AnneHappy-zh-cn.md  README.md  Update_log.md  azure-pipelines.yml  database.sql  database_performance_migration.sql  docker-compose.yml  host.txt  motd.txt  myhost.txt  mymotd.txt  pure-host.txt  pure-motd.txt  server_cn.cfg  vanilla-host.txt  vanilla-motd.txt  zone-host.txt  zone-motd.txt
Dedicated Server Fresh Start/: README.md
Dedicated Server Install Guide/: README.md  srcds1
addons/: TheCrashStand.vpk  bloodharvestfix.vpk  l4dtoolz.vdf  readme.txt  thesaccing.vpk  thesaccing_v2.vpk  tickrate_enabler.vdf
bash/: start.sh  stop.sh
cfg/: banned_user.cfg  confogl_rates.cfg  cvar_tracking.cfg  generalfixes.cfg  server.cfg  server_cn.cfg  server_kill.cfg  sharedplugins.cfg
docs/: annehappy_dynamic_ai_difficulty.md  infected_control_antibaiter_timing_intent_2026-06-07.html  infected_control_flow_visual_2026-06-04.html  infected_control_refactor_bug_audit_2026-06-04.md  infected_control_refactor_diff_2026-05-29.md  infected_control_spawn_timing_audit_2026-06-03.md  l4d2_master_a2s_matchmaking_research.md  l4d2_server_browser_security.md  (+1 more)
tools/l4d2_server_browser/: .gitignore  Cargo.toml  README.md  browser.example.toml  package-lock.json  package.json
tools/l4d2_server_browser/l4d2-server-browser-x86_64-unknown-linux-gnu/: README.md
tools/l4d2_server_browser/src/: app.rs  lib.rs  main.rs
tools/l4d2_server_browser/src-tauri/: Cargo.toml  tauri.conf.json
tools/l4d2_server_browser/src-tauri/capabilities/: default.json
tools/l4d2_server_browser/src-tauri/src/: main.rs
tools/l4d2_server_browser/tauri-ui/: app.js  i18n.js  index.html  styles.css
(+5512 files in other folders)
