[package]
name = "Anne刷服器"
version = "1.3.0"
edition = "2021"
description = "Anne刷服器：a Left 4 Dead 2 server browser using Steam master server and A2S_INFO."
license = "GPL-3.0-or-later"
publish = true

[lib]
name = "anne_server_browser"
path = "src/lib.rs"

[[bin]]
name = "Anne刷服器"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.32"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "charset", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
