[package]
name = "anne-server-browser-tauri"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
anne_server_browser = { path = "..", package = "Anne刷服器" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6", features = [] }
